# desktop-shortcut-generator

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
.cursor/skills/desktop-shortcut-generator/: SKILL.md  reference.md
.github/workflows/: release.yml
desktop_shortcut_generator/: __init__.py  main.py
desktop_shortcut_generator/config/: __init__.py  settings.py
desktop_shortcut_generator/domain/: __init__.py  entities.py  exceptions.py
desktop_shortcut_generator/i18n/: __init__.py  translator.py
desktop_shortcut_generator/i18n/locales/en/LC_MESSAGES/: messages.po
desktop_shortcut_generator/i18n/locales/es/LC_MESSAGES/: messages.po
desktop_shortcut_generator/i18n/locales/pt_BR/LC_MESSAGES/: messages.po
desktop_shortcut_generator/infrastructure/: __init__.py  desktop_trust.py  file_writer.py  xdg_paths.py
desktop_shortcut_generator/presentation/: __init__.py  components.py  main_window.py
desktop_shortcut_generator/use_cases/: __init__.py  create_shortcut.py
packaging/: pyinstaller.spec
scripts/: build_linux_release.sh  compile_translations.py
